--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "reserve": "file:",
+    "sonner": "^2.0.1",
     "supabase": "^2.15.8",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
